feat: add endpoint for blockchain height
